fixed tests in aapi-parser, prepared first TestModificationBasics for changes to Expand